[package]
name = "lucky-minesweeper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[profile.release]
debug = true

[[bench]]
name = "all"
harness = false
